--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = postgresql://airgoworld_o9ow_user:PSjON7Gp0bnb2Kzxd5Or8tiTcFoKS3KD@dpg-cudm2sd2ng1s73ejbii0-a.oregon-postgres.render.com/airgoworld_o9ow
+DATABASE_URL = postgresql://airgoworld_hkr7_user:5zO5b9HHPbA9ut3hvn0m2ZTm42I1Ciak@dpg-cudmvlt2ng1s73ejoqrg-a.oregon-postgres.render.com/airgoworld_hkr7
